Getting basic check-in flow working. The graph generation errors out though

--- a/site/assets/css/app.scss
+++ b/site/assets/css/app.scss
@@ -117,6 +117,13 @@ a.desc:after {
   margin-left: 10px;
 }
 
+.checkbox-item {
+  margin: 10px;
+  label {
+    padding-left: 25px;
+  }
+}
+
 .footer-copyright {
   p {
     margin-top: 0px;
